// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component renders correctly 1`] = `
<div>
  <form
    class="Form-root-1"
  >
    <div
      class="Form-row-5"
    >
      <p>
        Lorem Ipsum
      </p>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-6 MuiButton-contained Button-contained-8 Form-button-3 MuiButton-containedPrimary"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label Button-label-9"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </form>
</div>
`;

exports[`Form component renders with a multiple buttons 1`] = `
<div>
  <form
    class="Form-root-26"
  >
    <div
      class="Form-row-30"
    >
      <p>
        Lorem Ipsum
      </p>
    </div>
    <div
      class="Form-buttonWrapper-29"
    >
      <button
        class="MuiButtonBase-root MuiButton-root Button-root-31 MuiButton-contained Button-contained-33 Form-button-28 MuiButton-containedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label Button-label-34"
        >
          Cancel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root Button-root-31 MuiButton-contained Button-contained-33 Form-button-28 MuiButton-containedPrimary"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label Button-label-34"
        >
          Submit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`Form component renders with a right aligned button 1`] = `
<div>
  <form
    class="Form-root-51 Form-rightAlignButton-52"
  >
    <div
      class="Form-row-55"
    >
      <p>
        Lorem Ipsum
      </p>
    </div>
    <div
      class="Form-buttonWrapper-54"
    >
      <button
        class="MuiButtonBase-root MuiButton-root Button-root-56 MuiButton-contained Button-contained-58 Form-button-53 MuiButton-containedPrimary"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label Button-label-59"
        >
          Submit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`Form component test withFormControl calls onChange 1`] = `
<div>
  <input
    data-testid="id"
    name="test"
    type="text"
    value="Value"
  />
</div>
`;

exports[`Form component test withFormControl not calls onChange 1`] = `
<div>
  <input
    data-testid="id"
    name="test"
    type="text"
    value="Value"
  />
</div>
`;

exports[`Form component test withFormControl with no fieldIsRequiredError and value 1`] = `
<div>
  <input
    data-testid="id"
    name="test"
    type="text"
    value=""
  />
</div>
`;
